# budget-solver

./: .gitignore  CHANGELOG.md  LIMITATIONS.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.local.json
src/budget_solver/: __init__.py  __main__.py  auction_insights.py  bid_simulator.py  cli.py  constants.py  curves.py  data.py  data_pull.py  holiday_calendar.py  keyword_demand.py  mroas.py  narrative.py  prediction_log.py  scenarios.py  solver.py  stability.py  trends.py  utils.py  weather.py
src/budget_solver/excel/: __init__.py  builders.py  diagnostics.py  market_intelligence.py  phase6b.py  styling.py
tests/: test_fixes.py  test_golden.py  test_narrative.py  test_scenarios.py  test_stability.py
tests/fixtures/: expected_allocation.json  expected_phase2_scenarios_normal.txt  expected_phase2_scenarios_stress.txt  expected_phase3_scenarios_normal.txt  expected_phase3_scenarios_stress.txt  generate_synthetic_data.py  golden_run_output.txt
